--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "commitmsg": "validate-commit-msg",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "keywords": [],
   "author": "",
@@ -20,18 +23,23 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.19.1",
     "rollup-plugin-alias": "^2.2.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "standard": "^16.0.3"
+    "standard": "^16.0.3",
+    "husky": "^4.2.5",
+    "lint-staged": "^9.5.0",
+    "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "core-js": "^3.9.1",
     "@babel/runtime": "^7.8.4",
-    "@babel/runtime-corejs3": "^7.8.4"
+    "@babel/runtime-corejs3": "^7.8.4",
+    "core-js": "^3.9.1",
+    "lodash": "^4.17.15"
   }
 }
