--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/runtime": "^7.8.4",
     "@babel/runtime-corejs3": "^7.8.4",
+    "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "lodash": "^4.17.15"
   }
