--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
-    "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
+    "lint": "eslint --ext .js --ext .jsx --ext .vue src/",
     "commitmsg": "validate-commit-msg",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
@@ -18,21 +18,30 @@
     "@babel/plugin-transform-runtime": "^7.13.9",
     "@babel/preset-env": "^7.13.9",
     "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-eslint": "^8.0.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "prettier": "^1.19.1",
-    "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "standard": "^16.0.3",
+    "eslint-plugin-vue": "^7.10.0",
     "husky": "^4.2.5",
     "lint-staged": "^9.5.0",
+    "prettier": "^1.19.1",
+    "rollup-plugin-alias": "^2.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
+    "standard": "^16.0.3",
     "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
@@ -41,6 +50,7 @@
     "@babel/runtime-corejs3": "^7.8.4",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "rollup": "^2.50.6"
   }
 }
